welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:2: error: not found: value n
n=0
^occurrences:4: error: not found: value n
	{ if (i==lookingFor) {n=n+1}
                              ^occurrences:6: error: not found: value n
	return n
               ^