welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
n=0
	for (i <- 0 to nums.length) 
	{ if (i==lookingFor) {n=n+1}
	}
	return n
}
